--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
     "dependencies": {
         "@bundlr-network/client": "^0.5.12",
         "@project-serum/anchor": "^0.20.1",
-        "arweave": "^1.10.18"
+        "arweave": "^1.10.18",
+        "randombytes": "^2.1.0"
     },
     "devDependencies": {
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
         "@types/node": "^17.0.8",
+        "@types/randombytes": "^2.0.0",
         "chai": "^4.3.4",
         "commander": "^2.20.3",
         "mocha": "^9.0.3",
