--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,7 +6,7 @@ url = "https://anchor.projectserum.com"
 
 [provider]
 cluster = "localnet"
-wallet = "/Users/abishek/.config/solana/shekcel.json"
+wallet = "/Users/abishek/.config/solana/wordcel_admin.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
