Add invite program

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,5 +1,6 @@
 [programs.localnet]
 wordcel = "v4enuof3drNvU2Y3b5m7K62hMq3QUP6qQSV2jjxAhkp"
+invite = "6G5x4Es2YZYB5e4QkFJN88TrfLABkYEQpkUH5Gob9Cut"
 
 [registry]
 url = "https://anchor.projectserum.com"
