--- a/Anchor.toml
+++ b/Anchor.toml
@@ -10,5 +10,5 @@ cluster = "localnet"
 wallet = "~/.config/solana/wordcel_admin.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000"
 cli = "yarn run ts-node --experimental-top-level-await -P ./tsconfig.json scripts/cli.ts"
