--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+    "scripts": {
+        "test:all": "anchor test tests/**/**.ts",
+        "test": "anchor test"
+    },
     "dependencies": {
         "@bundlr-network/client": "^0.5.12",
         "@project-serum/anchor": "^0.24.2",
@@ -14,7 +18,7 @@
         "commander": "^2.20.3",
         "mocha": "^9.0.3",
         "node-fetch": "^2.6.1",
-        "ts-mocha": "^8.0.0",
+        "ts-mocha": "^10.0.0",
         "typescript": "^4.3.5"
     }
 }
