--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,3 +12,4 @@ wallet = "~/.config/solana/wordcel_admin.json"
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000"
 cli = "yarn run ts-node --experimental-top-level-await -P ./tsconfig.json scripts/cli.ts"
+invite = "yarn run ts-node --experimental-top-level-await -P ./tsconfig.json scripts/invite.ts"
