--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
         "test": "anchor test",
         "build:invite:mainnet": "anchor build -p invite --provider.cluster mainnet -- --features mainnet",
         "build:wordcel:mainnet": "anchor build -p wordcel --provider.cluster mainnet -- --features mainnet",
-        "build:all:mainnet": "anchor build --provider.cluster mainnet",
+        "build:all:mainnet": "anchor build --provider.cluster mainnet -- --features mainnet",
         "build:invite:devnet": "anchor build -p invite --provider.cluster devnet -- --features devnet",
         "build:wordcel:devnet": "anchor build -p wordcel --provider.cluster devnet -- --features devnet",
-        "build:all:devnet": "anchor build --provider.cluster devnet",
+        "build:all:devnet": "anchor build --provider.cluster devnet -- --features devnet",
         "upgrade:invite:mainnet": "goki upgrade-local -l target/deploy/invite.so -p .solana/keys/mainnet/invite-keypair.json -u ~/.config/solana/wordcel_mainnet.json -c mainnet",
         "upgrade:wordcel:mainnet": "goki upgrade-local -l target/deploy/wordcel.so -p .solana/keys/mainnet/wordcel-keypair.json -u ~/.config/solana/wordcel_mainnet.json -c mainnet"
     },
