--- a/programs/wordcel/Cargo.toml
+++ b/programs/wordcel/Cargo.toml
@@ -15,7 +15,7 @@ no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
 devnet = ["invite", "invite/devnet"]
-mainnet = ["invite", "invite/devnet"]
+mainnet = ["invite", "invite/mainnet"]
 
 [dependencies]
 anchor-lang = "0.24.2"
