Change program_id for localnet

--- a/programs/wordcel/Cargo.toml
+++ b/programs/wordcel/Cargo.toml
@@ -13,7 +13,7 @@ no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
-default = []
+default = ["invite"]
 devnet = ["invite", "invite/devnet"]
 mainnet = ["invite", "invite/mainnet"]
 
