--- a/programs/invite/Cargo.toml
+++ b/programs/invite/Cargo.toml
@@ -1,22 +1,21 @@
 [package]
-name = "wordcel"
-version = "0.1.1"
+name = "invite"
+version = "0.1.0"
 description = "Created with Anchor"
 edition = "2018"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "wordcel"
+name = "invite"
 
 [features]
 no-entrypoint = []
 no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
-default = ["invite"]
-devnet = ["invite", "invite/devnet"]
-mainnet = ["invite", "invite/mainnet"]
+default = []
+devnet = []
+mainnet = []
 
 [dependencies]
 anchor-lang = "0.24.2"
-invite = { path = "../invite", features = ["cpi"], optional = true }
