add: Test cases for slugger

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,6 +1,7 @@
 [programs.localnet]
 wordcel = "v4enuof3drNvU2Y3b5m7K62hMq3QUP6qQSV2jjxAhkp"
 invite = "6G5x4Es2YZYB5e4QkFJN88TrfLABkYEQpkUH5Gob9Cut"
+slugger = "SAbD2TPKyTd54oahjz6UEBzweXvojsRWbGB2t21gDnB"
 
 [programs.devnet]
 wordcel = "D9JJgeRf2rKq5LNMHLBMb92g4ZpeMgCyvZkd7QKwSCzg"
