--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,10 +6,12 @@ slugger = "SAbD2TPKyTd54oahjz6UEBzweXvojsRWbGB2t21gDnB"
 [programs.devnet]
 wordcel = "D9JJgeRf2rKq5LNMHLBMb92g4ZpeMgCyvZkd7QKwSCzg"
 invite = "6G5x4Es2YZYB5e4QkFJN88TrfLABkYEQpkUH5Gob9Cut"
+slugger = "SAbD2TPKyTd54oahjz6UEBzweXvojsRWbGB2t21gDnB"
 
 [programs.mainnet]
 wordcel = "EXzAYHZ8xS6QJ6xGRsdKZXixoQBLsuMbmwJozm85jHp"
 invite = "Fc4q6ttyDHr11HjMHRvanG9SskeR24Q62egdwsUUMHLf"
+slugger = "SAbD2TPKyTd54oahjz6UEBzweXvojsRWbGB2t21gDnB"
 
 [registry]
 url = "https://anchor.projectserum.com"
