--- a/programs/wordcel/Cargo.toml
+++ b/programs/wordcel/Cargo.toml
@@ -20,3 +20,4 @@ mainnet = ["invite", "invite/mainnet"]
 [dependencies]
 anchor-lang = "0.24.2"
 invite = { path = "../invite", features = ["cpi"], optional = true }
+solana-security-txt = "1.0.1"
